# ocular

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: architecture.md  benchmarks.md  deinstrumentation.md  telemetry.md  usage.md
ocular/: __init__.py
src/: callbacks.rs  lib.rs  model.rs  state.rs  telemetry.rs
tests/: test1.py  test2.py  test3.py
