[package]
name = "ocular-tracer"
version = "0.1.0"
edition = "2021"
authors = ["Seuriin"]
description = "CPython uOp & JIT Telemetry Tracer"

[lib]
name = "ocular_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
crossbeam-queue = "0.3.11"
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }

[features]
default = []
perfetto = ["serde", "serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
strip = true
panic = "abort"
